<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.voiceapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.voiceapp.ui.chat.ChatFragment"
        android:label=""
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.voiceapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.voiceapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/action_settings"
        android:name="com.example.voiceapp.ui.settings.SettingsFragment"
        android:label="設定"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_debug"
        android:name="com.example.voiceapp.ui.debug.DebugFragment"
        android:label="@string/debug_title"
        tools:layout="@layout/fragment_debug" />
</navigation>